first P's appearance on gameLayer

--- a/proj.win32/MyFirstGame.vcxproj
+++ b/proj.win32/MyFirstGame.vcxproj
@@ -163,6 +163,7 @@ xcopy "$(ProjectDir)..\Resources" "$(OutDir)\Resources\" /D /E /I /F /Y
     <ClInclude Include="..\Classes\GameLayer.h" />
     <ClInclude Include="..\Classes\GameMenu.h" />
     <ClInclude Include="..\Classes\Player.h" />
+    <ClInclude Include="..\Classes\Specification.h" />
     <ClInclude Include="main.h" />
   </ItemGroup>
   <ItemGroup>
